Edited wiki page UnreleasedChanges through web user interface.

--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -35,6 +35,7 @@ This page lists the features that are expected in v1.8:
  * Spawn point code
  * Make the cactus moats a bit more random
  * Fire-proof combinations
+ * Different types of logging, with saving
  * Fix flower spawning
 
 == Maybe ==
