--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -28,10 +28,10 @@ This page lists the features that are expected in v1.8:
 
 == In Progress ==
 
- * Do the seven billion "todo"s in the code
-
 == Planned ==
 
+ * Control shortcuts
+ * Check natural terrain isn't conflicting with Mace buildings
  * Novv's trees are too close, need to fix
  * Spawn point code
  * Different types of logging, with saving
