Edited wiki page UnreleasedChanges through web user interface.

--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -10,6 +10,7 @@ This page lists the features that are expected in v1.8:
  * Novv's trees are too close, need to fix
  * Spawn point code
  * Different types of logging, with saving
+ * TabStops
 
 == Done ==
 
