--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -11,6 +11,7 @@ This page lists the features that are expected in v1.8:
  * Spawn point code
  * Different types of logging, with saving
  * !TabStops
+ * Fix redstone floor block bug
 
 == Done ==
 
