--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -8,7 +8,6 @@ This page lists the features that are expected in v1.8:
  * Control shortcuts
  * Check natural terrain isn't conflicting with Mace buildings
  * Novv's trees are too close, need to fix
- * Spawn point code
  * Different types of logging, with saving
  * !TabStops
  * Fix redstone floor block bug
@@ -29,6 +28,7 @@ This page lists the features that are expected in v1.8:
  * Path block can now be specified for each city theme.
  * Gold ore on the ground (layer 63) of the resource world will be turned into the path block.
  * Flowers can be specified for each city theme (e.g. cacti and dead shrubs in the desert city)
+ * You can decide to spawn inside/outside a random city, or away from the generated cities.
  * Cities without farms will now have flowers on the empty area outside
  * The doors on farms are now fence gates
  * Randomly selected combinations are now fire-proof
