--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -8,6 +8,8 @@ This page lists the features that are expected in v1.8:
  * Control shortcuts
  * Different types of logging, with saving
  * !TabStops
+ * Rewrite "done" list to be more readable
+ * Testing
 
 == Done ==
 
