Edited wiki page FAQ through web user interface.

--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -13,7 +13,7 @@
 == Overview ==
 
 *What is Mace?*
-	Mace is a tool for !MineCraft, which creates a regular world with a random city at the spawn point. You can then use the city for exploration, expansion, destruction, creation, inspiration, modification...
+	Mace is a tool for !MineCraft, which creates a regular world with randomly generated cities. You can use the cities for exploration, expansion, destruction, creation, inspiration, modification...
 
 *When will Mace be finished?*
 	My aim with Mace is to randomly generate a complete city, so from that perspective it is done. However, there are many more features that I would like to add. Eventually I'll declare it as finished, then move on to something else.
@@ -24,6 +24,8 @@
 *Are there any other city generators available for !MineCraft?*
 	Yes indeed! Such as [http://www.minecraftforum.net/topic/171188-v173formivores-mods-city-wall-road-generator/ Formivore's city, wall & road generators] and [http://www.minecraftforum.net/topic/227822-173-millenaire-npc-village-114-indian-parchments-slovenian-translation/ Kinniken's Millénaire].
 
+	Seen any other city generators? Let me know and I'll add them here.
+
 *Which programming language is Mace written in?*
 	Mace is written in [http://en.wikipedia.org/wiki/C_Sharp_(programming_language) C#]. Some of the data files are written in [http://en.wikipedia.org/wiki/XML XML].
 
@@ -33,7 +35,7 @@
 == Installation and Running ==
 
 *How do I install Mace?*
-	There is no installer for Mace. Just extract the files anywhere and then run Mace.exe. If you have any problems, you are very welcome to post in the [http://www.minecraftforum.net/topic/357201-mace-v140-random-city-generator/ Mace topic].
+	There is no installer for Mace. Just extract all the files anywhere and then run Mace.exe. If you have any problems, you are very welcome to post in the [http://www.minecraftforum.net/topic/357201-mace-v140-random-city-generator/ Mace topic].
 
 *How do I remove Mace from my computer?*
 	Delete the Mace folder. Mace doesn't edit any other areas of your computer, except for the !MineCraft saves folder.
@@ -85,19 +87,14 @@
 *I have a suggestion, would you like it?*
 	Definitely! It might be something I've already got planned, so have a quick look through the [ToDo] list to see if it's listed.
 
-*Can you include NPCs in Mace?*
+*Can I include NPCs in Mace?*
 	Yes! Ghostdancer has created the [http://www.minecraftforum.net/topic/532831-173-mobs-for-mace-npc-mod/ Mobs for Mace] mod, which allows you to add NPCs to the city.
 
 *Is it possible to change the biome that the city is in?*
 	Unfortunately the biome data is decided by !MineCraft at run time, so it is not possible for Mace to change it.
 
-	You could try changing the world seed though. If you know a certain world seed always generates the biome yoiu want at the spawn point, just use that.
-
-*Is it possible to specify the type of terrain around the city?*
+*Is it possible to specify the type of terrain around the cities?*
 	In the future this might be possible, but I'm currently not focussing on terrain generation.
-
-*Will Mace be able to make multiple cities in one world?*
-	I would like to add this in the future, so watch this space...
 
 *When a new feature is added to !MineCraft, will you add it to Mace?*
 	If I can find a good use for it, then I definitely will!
@@ -112,12 +109,10 @@
 	To comply with forum regulations and to avoid any awkward situations, all contributed schematics must have a license. Any open source license is okay. You can also generate a [http://creativecommons.org/choose/ creative commons license]. To be compatible with Mace the license must allow for modifications.
 
 *Can I change how often a building appears?*
-	Yes. Go to the Resources folder, then open buildings.xml. Scroll down and look at the building names. Once you find the building, change the frequency value to "very common", "common", "average", "rare", "very rare", "unique" or "exclude". Excluded buildings will not appear on the map. Unique buildings appear a maximum of once per city.
+	Yes. Go to the Resources folder, then the Themes folder. Open the appropriate theme file in Notepad. Scroll down and look at the building names. Once you find the building, change the frequency value to "very common", "common", "average", "rare", "very rare", "unique" or "exclude". Excluded buildings will not appear on the map. Unique buildings appear a maximum of once per city.
 
 *Building X didn't appear in my city. Why is that?*
 	The unique buildings appear a maximum of once per city. There's a lot of unique buildings, so each city will contain a subset of them. Larger cities will contain more unique buildings.
-
-	On (very) small cities it might not be possible to show all of the buildings, simply because there isn't enough space to put them all in.
 
 *Can I modify the buildings that Mace puts in the city?*
 	Yes. Please see [http://www.minecraftforum.net/topic/357201-mace-v150-random-city-generator/page__view__findpost__p__6854916 Ghostdancer's instructions] for all the details.
@@ -128,7 +123,7 @@
 	Alternatively, !SmashCuber has created a [http://www.youtube.com/watch?v=HQSFDYwsT3I&feature=channel_video_title video guide for adding buildings].
 
 *All Mace buildings are square, any plans to change that?*
-	Currently I don't have any plans to change this. Squares are a lot easier to deal with and rectangular/circular buildings can be created within squares, so I'm happy with the way it works.
+	Currently I don't have any plans to change this. Squares are a lot easier to deal with and rectangular/circular buildings can be created within squares, so it's all good!
 
 *Do Mace buildings have a theme?*
 	My inspiration for buildings is anything you would find in a typical medieval or Dungeons & Dragons city. I also include buildings that make sense for !MineCraft, such as a crafting hut.
@@ -156,10 +151,10 @@
 	Yes. You are very welcome to do this. Mace is released under the GNU GPL license, which has terms [http://creativecommons.org/licenses/by-sa/3.0/ roughly similar to this].
 
 *Can I use a Mace city for my adventure map or let's play series?*
-	Yes. I'd love to see Mace being used for anything like this, so it would be be great if you let me know about it.
+	Yes. I'd love to see Mace being used for anything like this, so it would be great if you let me know about it.
 
 *Can I change the code in Mace?*
-	Yes. The entire Mace code and all resources can be found on the downloads page. Mace is written in C# and edited in Visual Studio 2010. Other IDEs are available!
+	Yes. The entire Mace code and all resources can be found on the downloads page. Mace is written in C# and edited in Visual Studio 2010. "Other IDEs are available!"
 
 *Can I distribute my changes to Mace?*
 	Yes. Mace is released under the GNU GPL license, which has terms [http://creativecommons.org/licenses/by-sa/3.0/ roughly similar to this]. I'm always interested to see what people do with Mace, so it would be nice if you'd let me know.
