--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -7,6 +7,9 @@ The focus for Mace 1.9 will be the content.
 
 == Planned ==
 
+ * Need rotation code for new blocks (Block 62, Mushroom blocks, stone brick stairs, brick stairs, and lilly pads)
+ * Export schematic (when making one city)
+ * Torches on the city walls will heat up ice blocks - need to fix this
  * Theme generator (I'll do this when I'm happy with the structure of the theme files)
  * More buildings
   * City hall (unique)
