--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -18,6 +18,7 @@ The focus for Mace 1.9 will be the content.
   * ...
  * Add a boathouse when there's a water moat
  * Add an option to generate empty plots for a multiplayer server (make this a theme?)
+ * Optionally allow for specifying the city x/z co-ordinates
  * Add to FAQ: how to use with multiplayer servers
  * Make the code match a style guide
  * Improve the city entrance
