--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -3,4 +3,13 @@
 
 These changes are done and will be in Mace 1.9:
 
+*Farms*
+
+ * Farms are now on one side of the city.
+ * Removed the code-generated farms.
+ * Added farm buildings: melon farms, pumpkin farms, wheat farms (large & small), cactus farms (large & small), orchards (oak, birch, spruce), sugar cane farms.
+ * Improved the top of the mushroom farms.
+
+*Other*
+
  * Flag patterns are now stored in files in the resource folder.
