--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -17,4 +17,8 @@ These changes are done and will be in Mace 1.9:
  * New buildings: Large ruins (medieval theme)
  * Improved buildings: Prison
  * Flag patterns are now stored in files in the resource folder.
- * Added rotation code for: brick stairs, nether brick stairs, stone brick stairs, fence gates, burning furnaces, open trapdoors
+
+*Code*
+
+ * Updated to Substrate 1.0.0
+ * Added rotation code for: brick stairs, nether brick stairs, stone brick stairs, fence gates, burning furnaces, open trapdoors, redstone repeaters
