Edited wiki page ToDo through web user interface.

--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -7,7 +7,6 @@ The focus for Mace 1.9 will be the content.
 
 == Planned ==
 
- * Need rotation code for new blocks (Block 62, Mushroom blocks, stone brick stairs, brick stairs, and lilly pads)
  * Export schematic (when making one city)
  * Save log to file
  * Torches on the city walls will heat up ice blocks - need to fix this
@@ -15,7 +14,7 @@ The focus for Mace 1.9 will be the content.
  * More buildings
   * City hall (unique)
   * Buildings for the Desert City theme
-  * Potion shop and crafting place
+  * Potion shop and brewing place
   * ...
  * Add a boathouse when there's a water moat
  * Add an option to generate empty plots for a multiplayer server (make this a theme?)
