Edited wiki page UnreleasedChanges through web user interface.

--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -13,12 +13,11 @@ These changes are done and will be in Mace 1.9:
 
 *Other*
 
+ * New buildings: Large ruins (medieval theme), Shop (desert theme), Large house (desert theme).
  * Lots of the new blocks are being used: window panes, stone bricks, iron bars, melons, pumpkins...
- * New buildings: Large ruins (medieval theme)
- * Improved buildings: Prison
 
 *Code*
 
  * Updated to Substrate 1.0.0
- * Added rotation code for: brick stairs, nether brick stairs, stone brick stairs, fence gates, burning furnaces, open trapdoors, redstone repeaters, levers, pistons, detector rails, powered rails, vines.
+ * Added rotation code for: brick stairs, nether brick stairs, stone brick stairs, fence gates, burning furnaces, open trapdoors, redstone repeaters, levers, pistons, detector rails, powered rails, vines, huge mushrooms.
  * Flag patterns are now stored in files in the resource folder.
