Edited wiki page UnreleasedChanges through web user interface.

--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -9,12 +9,12 @@ These changes are done and will be in Mace 1.9:
  * Removed the code-generated farms.
  * Added farm buildings: melon farms, pumpkin farms, wheat farms (large & small), cactus farms (large & small), orchards (oak, birch, spruce), sugar cane farms.
  * Improved the top of the mushroom farms.
- * Torches now have farms.
+ * Farms now have torches.
 
 *Other*
 
  * New buildings: Large ruins (medieval theme), Shop (desert theme), three houses (desert theme), compound (desert theme)
- * Lots of the new blocks are being used: window panes, stone bricks, iron bars, melons, pumpkins...
+ * Lots of the new blocks are being used: window panes, stone bricks, iron bars, melons, pumpkins, slabs...
  * Small improvements to a few existing buildings
 
 *Code*
